fix(webc): input-control.webc

--- a/input-control.webc
+++ b/input-control.webc
@@ -1,2 +1,5 @@
-<script src="./ground-control.js"></script>
-<script src="./input-control.js"></script>
+<script webc:keep type="module">
+  import '@terriblemia/ground-control/input-control.js';
+</script>
+
+<slot></slot>
